fix new buttons and pressure plates not being able to activate doors