@@ -1,6 +1,6 @@
 package net.geforcemods.securitycraft.misc;
 
-import java.util.Arrays;
+import java.util.ArrayList;
 import java.util.List;
 
 import net.geforcemods.securitycraft.SCContent;
@@ -17,28 +17,25 @@ import net.minecraft.world.level.block.state.properties.BlockStateProperties;
 
 public class CommonDoorActivator implements IDoorActivator {
 	//@formatter:off
-	private List<Block> blocks = Arrays.asList(
+	private static final List<Block> BLOCKS = new ArrayList<>(List.of(
 			SCContent.LASER_BLOCK.get(),
 			SCContent.RETINAL_SCANNER.get(),
 			SCContent.KEYPAD.get(),
 			SCContent.KEYCARD_READER.get(),
 			SCContent.PORTABLE_RADAR.get(),
-			SCContent.REINFORCED_STONE_BUTTON.get(),
-			SCContent.REINFORCED_OAK_BUTTON.get(),
-			SCContent.REINFORCED_SPRUCE_BUTTON.get(),
-			SCContent.REINFORCED_BIRCH_BUTTON.get(),
-			SCContent.REINFORCED_JUNGLE_BUTTON.get(),
-			SCContent.REINFORCED_ACACIA_BUTTON.get(),
-			SCContent.REINFORCED_DARK_OAK_BUTTON.get(),
-			SCContent.REINFORCED_CRIMSON_BUTTON.get(),
-			SCContent.REINFORCED_WARPED_BUTTON.get(),
-			SCContent.REINFORCED_POLISHED_BLACKSTONE_BUTTON.get(),
 			SCContent.REINFORCED_LEVER.get(),
 			SCContent.REINFORCED_OBSERVER.get(),
 			SCContent.KEY_PANEL_BLOCK.get(),
 			SCContent.SECURITY_CAMERA.get(),
-			SCContent.SONIC_SECURITY_SYSTEM.get());
+			SCContent.SONIC_SECURITY_SYSTEM.get()));
 	//@formatter:on
+
+	public static boolean addActivator(Block block) {
+		if (BLOCKS.contains(block))
+			return false;
+		else
+			return BLOCKS.add(block);
+	}
 
 	@Override
 	public boolean isPowering(Level level, BlockPos pos, BlockState state, BlockEntity be, Direction direction, int distance) {
@@ -76,6 +73,6 @@ public class CommonDoorActivator implements IDoorActivator {
 
 	@Override
 	public List<Block> getBlocks() {
-		return blocks;
+		return BLOCKS;
 	}
 }
